Fix z-index

--- a/native/more-options-2/js/more-options/more-options.css
+++ b/native/more-options-2/js/more-options/more-options.css
@@ -11,6 +11,7 @@
 
 
 .more-options__content {
+    z-index: 2;
     position: absolute;
     display: flex;
     align-items: stretch;
